fixed spacing issue in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ code {
 }
 
 .currency-converter {
+  padding-top: 20rem;
   background-color: rgb(63, 0, 63);
   color: white;
 }
@@ -67,6 +68,10 @@ code {
 @media only screen and (max-width: 768px) {
   .app {
     display: inline;
+  }
+
+  .currency-converter {
+    padding-top: 0;
   }
 
   .currency-header {
